# UR5e_Remote

./: .gitignore  README.md
UR5e_Project_Oculus_VR/Assets/Materials/: EmissiveLight.mat  RoboticArm.lighting  Sphere.mat
UR5e_Project_Oculus_VR/Assets/Prefabs/: Walls.prefab
UR5e_Project_Oculus_VR/Assets/Scenes/: PLANE MATERIAL.mat
UR5e_Project_Oculus_VR/Assets/Scripts/: SphereMovement.cs  trace_the ball.cs
UR5e_Project_Oculus_VR/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
UR5e_Project_Oculus_VR/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
UR5e_Project_Oculus_VR/UserSettings/: EditorUserSettings.asset  Search.settings
ros_ur_driver/src/ur5e_control/: package.xml  setup.cfg  setup.py
ros_ur_driver/src/ur5e_move/: CMakeLists.txt  package.xml
ros_ur_driver/src/ur5e_move/src/: move_arm.cpp
ur5e_project_stVR/Assets/Materials/: Floor.mat  Wall.mat
ur5e_project_stVR/Assets/Prefabs/: Sphere.prefab
ur5e_project_stVR/Assets/Resources/: ROSConnectionPrefab.prefab
ur5e_project_stVR/Assets/Scenes/: PLANE MATERIAL 1.mat  RoboticArmVR.unity
ur5e_project_stVR/Assets/Scripts/: ROSTopicBasedControlPlugin.cs  VR_Controller.cs
ur5e_project_stVR/ProjectSettings/: TagManager.asset
ur5e_project_stVR/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2022.dwlt
ur5e_project_stVR/log/: latest_list
ur5e_sim/src/ur5e_control/: package.xml
ur5e_sim/src/ur5e_description/: CMakeLists.txt  package.xml
ur5e_sim/src/ur5e_move2/: CMakeLists.txt  package.xml
ur5e_sim/src/ur5e_moveit/: .setup_assistant  package.xml
(+61 files in other folders)
